Fix spacing

--- a/_sass/_theme-a4w.scss
+++ b/_sass/_theme-a4w.scss
@@ -385,7 +385,7 @@ textarea {
 // main nav
 
 .nav-main {
-  padding: 0.5em 1.5em 3.75em 1em;
+  padding: 0.5em 1.5em 4em 1em;
   float: left;
   position: absolute;
   top: 0;
